<resources>
    <string name="app_name">Inhaler_prj_v1.0</string>
    <string name="label_activity_main">Main</string>
    <string name="label_button_play_audio">PLAY</string>
    <string name="label_button_stop_audio">STOP</string>
    <string name="label_button_record">RECORD</string>
    <string name="label_button_record_stop">STOP</string>
    <string name="label_textview_sound_play">Sound Player</string>
    <string name="label_textview_sound_record">Recorder</string>
    <string name="sinusoid_label">Sinusoid</string>
    <string name="fmcw_label">FMCW</string>
    <string name="delay_label">Delay</string>
    <string name="speaker_label">Speaker</string>
    <string name="earpiece_label">Earpiece</string>
    <string name="lable_toggle_playandrecord">Play &amp; Record simultaneously</string>
    <string name="toggle_on">ON</string>
    <string name="toggle_off">OFF</string>
    <string name="hit_label">Hit</string>
    <string name="start_process_label">Process</string>
</resources>
