<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_textview_sound_play"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_sound_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:onClick="playSound_Callback"
        android:text="@string/label_button_play_audio"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sound" />

    <Button
        android:id="@+id/button_sound_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:onClick="stopSound_Callback"
        android:text="@string/label_button_stop_audio"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sound" />

    <TextView
        android:id="@+id/textView_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_textview_sound_record"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sound"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/button_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:onClick="startRecord_Callback"
        android:text="@string/label_button_record"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_record" />

    <Button
        android:id="@+id/button_record_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:onClick="stopRecord_Callback"
        android:text="@string/label_button_record_stop"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_record" />

    <TextView
        android:id="@+id/textView_waveform_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:onClick="changeWaveform_Callback"
        android:text="Sinusoid"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_speaker_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:onClick="changeSpeaker_Callback"
        android:text="Speaker"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_waveform_selection"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_playrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/lable_toggle_playandrecord"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_record" />

    <ToggleButton
        android:id="@+id/toggleButton_playandrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="ToggleButton"
        android:textOff="@string/toggle_off"
        android:textOn="@string/toggle_on"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_playrecord" />

    <Button
        android:id="@+id/button_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:onClick="checkpointHit_Callback"
        android:text="@string/hit_label"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_playandrecord"
        app:layout_constraintTop_toBottomOf="@+id/textView_playrecord" />

    <TextView
        android:id="@+id/textView_checkpoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:gravity="bottom"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="6"
        android:scrollbars="vertical"
        app:layout_constraintStart_toEndOf="@+id/toggleButton_playandrecord"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_playandrecord" />

    <TextView
        android:id="@+id/textView_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton_playandrecord" />

    <ToggleButton
        android:id="@+id/toggleButton_orientCalib"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="ToggleButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_Calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Calibration"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/toggleButton_orientCalib"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_rotation" />

    <Switch
        android:id="@+id/switch_IMUrecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="IMU Record"
        app:layout_constraintBottom_toTopOf="@+id/textView_speaker_selection"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>